# aides_examples

./: .gitignore  README.md
aides/python/buy_on_ebay_rabbitmq/: README.md  emit_logs.py  main.py  main_dev.bat  new_task.py  pyproject.toml  receive.py  receive_logs_direct.py  receive_logs_topic.py  requirements.txt  rpc_client.py  test.http
aides/python/buy_on_ebay_rabbitmq/app/: main.py
aides/python/buy_on_ebay_rabbitmq/app/appearance/: README.md
aides/python/buy_on_ebay_rabbitmq/app/keeper/: README.md
aides/python/buy_on_ebay_rabbitmq/app/routers/: about.py
aides/python/buy_on_ebay_rabbitmq/demo_examples/: README.md  emit_log_direct.py  emit_log_topic_cloudampq.py  receive_logs.py  receive_logs_topic.py  rpc_server.py
aides/python/buy_on_ebay_rabbitmq/demo_examples/rabbitmq_faststream_fastapi/: README.md  main.py  test.http
aides/python/buy_on_ebay_rabbitmq/kins/: main.py
aides/python/buy_on_ebay_rabbitmq/kins/appearance/: README.md  requirements.txt  server.py
aides/python/buy_on_ebay_rabbitmq/kins/brain/: README.md  brain.py  server.py
aides/python/buy_on_ebay_rabbitmq/kins/keeper/: server.py
aides/python/buy_on_ebay_rabbitmq/kins/savant/: README.md
aides/python/buy_on_ebay_rabbitmq/kins/share/: config.py  configure.json  context.py
aides/python/study_language_rabbitmq/: README.md  main_dev.bat  pyproject.toml  requirements.txt  test.http
aides/python/study_language_rabbitmq/app/: main.py
aides/python/study_language_rabbitmq/app/internal/: config.py
aides/python/study_language_rabbitmq/kins/: README.md
spikes/: README.md
(+102 files in other folders)
