[tool.poetry]
name = "buy-on-ebay-rabbitmq"
version = "0.1.0"
description = "The aide for appraise purchase the items on eBay."
authors = ["Andrii Syrokomskyi <signmotion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
load-dotenv = "^0.1.0"
fastapi = "^0.105.0"
faststream = {extras = ["rabbit"], version = "^0.3.6"}
flair = "^0.13.1"
httpx = "^0.26.0"
python = "^3.9"
sanitize-filename = "^1.2.0"
uvicorn = "^0.24.0.post1"
watchfiles = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
